keil.log
*** Using Compiler 'V6.21', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'rt-thread'
compiling usb_glue_gd.c...
compiling usbd_cdc_acm.c...
rt-thread/components/drivers/usb/cherryusb/platform/rtthread/usbh_dfs.c(174): warning: data argument not used by format string [-Wformat-extra-args]
  174 |     snprintf(mount_point, CONFIG_USBHOST_DEV_NAMELEN, CONFIG_USB_DFS_MOUNT_POINT, msc_class->sdchar);
      |                                                       ~~~~~~~~~~~~~~~~~~~~~~~~~~  ^
rt-thread/components/drivers/usb/cherryusb/platform/rtthread/usbh_dfs.c(220): warning: data argument not used by format string [-Wformat-extra-args]
  220 |     snprintf(mount_point, CONFIG_USBHOST_DEV_NAMELEN, CONFIG_USB_DFS_MOUNT_POINT, msc_class->sdchar);
      |                                                       ~~~~~~~~~~~~~~~~~~~~~~~~~~  ^
2 warnings generated.
compiling usbh_dfs.c...
compiling usb_osal_rtthread.c...
compiling mnt.c...
compiling usb_msh.c...
compiling usb_check.c...
compiling usbh_hid.c...
compiling usb_dc_dwc2.c...
compiling usbh_msc.c...
compiling usbd_msc.c...
compiling usbh_hub.c...
compiling usbd_core.c...
compiling usbh_core.c...
compiling main.c...
compiling usb_hc_dwc2.c...
compiling syscall_mem.c...
compiling cctype.c...
compiling cstdlib.c...
compiling syscalls.c...
compiling cstring.c...
rt-thread/components/libc/compilers/common/cwchar.c(117): warning: result of comparison of constant 196607 with expression of type 'wchar_t' (aka 'unsigned short') is always true [-Wtautological-constant-out-of-range-compare]
  117 |          (ucs >= 0x20000 && ucs <= 0x2ffff)
      |                             ~~~ ^  ~~~~~~~
rt-thread/components/libc/compilers/common/cwchar.c(117): warning: result of comparison of constant 131072 with expression of type 'wchar_t' (aka 'unsigned short') is always false [-Wtautological-constant-out-of-range-compare]
  117 |          (ucs >= 0x20000 && ucs <= 0x2ffff)
      |           ~~~ ^  ~~~~~~~
2 warnings generated.
compiling cwchar.c...
compiling ctime.c...
compiling cunistd.c...
compiling blk.c...
compiling blk_dev.c...
compiling blk_dfs.c...
compiling blk_partition.c...
compiling dfs.c...
compiling device.c...
compiling efi.c...
compiling completion_comm.c...
compiling completion_up.c...
compiling condvar.c...
compiling pipe.c...
compiling dataqueue.c...
compiling ringblk_buf.c...
compiling ringbuffer.c...
compiling waitqueue.c...
compiling workqueue.c...
compiling dev_pin.c...
compiling dev_mmc.c...
compiling dev_mmcsd_core.c...
compiling dev_block.c...
compiling dev_sd.c...
compiling dev_sdio.c...
compiling dev_serial.c...
compiling stm32f4xx_hal_msp.c...
compiling board.c...
compiling cdc_acm_multi_template.c...
compiling cdc_acm_template.c...
compiling usbh_hid_template.c...
board/ports/CherryUSB/demo/usbh_standard_hid.c(141): error: static declaration of 'usr_mouse_init' follows non-static declaration
  141 | static void usr_mouse_init (void)
      |             ^
board/ports/CherryUSB/demo/usbh_standard_hid.h(80): note: previous declaration is here
   80 | void usr_mouse_init(void);
      |      ^
board/ports/CherryUSB/demo/usbh_standard_hid.c(159): error: static declaration of 'usr_mouse_process_data' follows non-static declaration
  159 | static void usr_mouse_process_data (mouse_report_data *data)
      |             ^
board/ports/CherryUSB/demo/usbh_standard_hid.h(82): note: previous declaration is here
   82 | void usr_mouse_process_data(mouse_report_data *data);
      |      ^
board/ports/CherryUSB/demo/usbh_standard_hid.c(181): error: static declaration of 'usr_keybrd_init' follows non-static declaration
  181 | static void usr_keybrd_init (void)
      |             ^
board/ports/CherryUSB/demo/usbh_standard_hid.h(89): note: previous declaration is here
   89 | void usr_keybrd_init(void);
      |      ^
board/ports/CherryUSB/demo/usbh_standard_hid.c(219): error: static declaration of 'usr_keybrd_process_data' follows non-static declaration
  219 | static void usr_keybrd_process_data (uint8_t data)
      |             ^
board/ports/CherryUSB/demo/usbh_standard_hid.h(91): note: previous declaration is here
   91 | void usr_keybrd_process_data(uint8_t pbuf);
      |      ^
4 errors generated.
compiling usbh_standard_hid.c...
compiling msc_ram_template.c...
compiling romfs.c...
compiling usb_demo.c...
compiling phy_reset.c...
compiling usb_low.c...
compiling sdcard_port.c...
assembling startup_stm32f429xx.s...
compiling drv_gpio.c...
compiling drv_sdram.c...
compiling drv_eth.c...
compiling drv_sdio.c...
compiling devfs.c...
compiling drv_usart.c...
compiling drv_common.c...
compiling ffunicode.c...
compiling dfs_elm.c...
compiling dfs_romfs.c...
compiling dfs_fs.c...
compiling dfs_posix.c...
compiling src_dfs.c...
compiling dfs_file.c...
compiling ff.c...
compiling shell.c...
compiling msh_file.c...
compiling msh.c...
compiling cmd.c...
compiling msh_parse.c...
compiling clock.c...
compiling components.c...
compiling cpu_up.c...
compiling defunct.c...
compiling idle.c...
compiling irq.c...
compiling kservice.c...
compiling ipc.c...
compiling memheap.c...
compiling object.c...
compiling scheduler_comm.c...
compiling scheduler_up.c...
compiling thread.c...
compiling timer.c...
compiling kstdio.c...
compiling rt_vsscanf.c...
compiling rt_vsnprintf_tiny.c...
compiling kerrno.c...
compiling kstring.c...
compiling div0.c...
assembling context_rvds.S...
compiling atomic_arm.c...
compiling showmem.c...
compiling cpuport.c...
compiling system_stm32f4xx.c...
compiling stm32f4xx_ll_fmc.c...
compiling stm32f4xx_hal_cryp_ex.c...
compiling stm32f4xx_hal_dma.c...
compiling stm32f4xx_ll_fsmc.c...
compiling stm32f4xx_hal_crc.c...
compiling stm32f4xx_hal.c...
compiling stm32f4xx_hal_gpio.c...
compiling stm32f4xx_hal_rcc.c...
compiling stm32f4xx_hal_rng.c...
compiling stm32f4xx_hal_pwr_ex.c...
compiling stm32f4xx_hal_pwr.c...
compiling stm32f4xx_hal_sd.c...
compiling stm32f4xx_hal_cortex.c...
compiling stm32f4xx_hal_cryp.c...
compiling stm32f4xx_hal_uart.c...
compiling stm32f4xx_hal_eth.c...
compiling stm32f4xx_hal_usart.c...
compiling stm32f4xx_hal_sdram.c...
compiling stm32f4xx_hal_rcc_ex.c...
compiling stm32f4xx_hal_cec.c...
compiling stm32f4xx_ll_sdmmc.c...
compiling stm32f4xx_hal_dma_ex.c...
compiling api_lib.c...
compiling err.c...
compiling netbuf.c...
compiling api_msg.c...
compiling netdb.c...
compiling netifapi.c...
compiling tcpip.c...
compiling ping.c...
compiling sockets.c...
compiling def.c...
compiling inet_chksum.c...
compiling dns.c...
compiling init.c...
compiling ip.c...
compiling autoip.c...
compiling dhcp.c...
compiling etharp.c...
compiling icmp.c...
compiling igmp.c...
compiling ip4.c...
compiling ip4_addr.c...
compiling ip4_frag.c...
compiling memp.c...
compiling netif.c...
compiling raw.c...
compiling pbuf.c...
compiling stats.c...
compiling sys.c...
compiling tcp.c...
compiling tcp_in.c...
compiling timeouts.c...
compiling tcp_out.c...
compiling udp.c...
compiling ethernet.c...
compiling lowpan6.c...
compiling ethernetif.c...
compiling sys_arch.c...
compiling netdev_ipaddr.c...
rt-thread/components/net/netdev/src/netdev.c(24): warning: In file included from...rt-thread/components/net/sal/include\sal_low_lvl.h(27): warning: redefinition of typedef 'socklen_t' is a C11 feature [-Wtypedef-redefinition]
   27 | typedef uint32_t socklen_t;
      |                  ^
rt-thread/components/net/sal/include/sal_socket.h(22): note: previous definition is here
   22 | typedef uint32_t socklen_t;
      |                  ^
1 warning generated.
compiling netdev.c...
compiling dfs_net.c...
compiling net_netdb.c...
rt-thread/components/net/sal/impl/af_inet_lwip.c(23): warning: In file included from...rt-thread/components/net/sal/include\sal_low_lvl.h(27): warning: redefinition of typedef 'socklen_t' is a C11 feature [-Wtypedef-redefinition]
   27 | typedef uint32_t socklen_t;
      |                  ^
rt-thread/components/net/lwip/lwip-2.0.3/src/include\lwip/sockets.h(108): note: previous definition is here
  108 | typedef u32_t socklen_t;
      |               ^
1 warning generated.
compiling af_inet_lwip.c...
compiling net_sockets.c...
rt-thread/components/net/sal/src/sal_socket.c(26): warning: In file included from...rt-thread/components/net/sal/include\sal_low_lvl.h(27): warning: redefinition of typedef 'socklen_t' is a C11 feature [-Wtypedef-redefinition]
   27 | typedef uint32_t socklen_t;
      |                  ^
rt-thread/components/net/sal/include\sal_socket.h(22): note: previous definition is here
   22 | typedef uint32_t socklen_t;
      |                  ^
1 warning generated.
compiling sal_socket.c...
".\build\keil\Obj\rt-thread.axf" - 4 Error(s), 7 Warning(s).
Target not created.
Build Time Elapsed:  00:00:11
